2013-10-05  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/include/polarssl/aes.h: Updated from PolarSSL 1.2.9.
	* polarssl/include/polarssl/bignum.h: Ditto.
	* polarssl/include/polarssl/config.h: Ditto.
	* polarssl/include/polarssl/rsa.h: Ditto.
	* polarssl/library/aes.c, polarssl/library/bignum.c: Ditto.
	* polarssl/library/rsa.c: Ditto.  Fix rsa_free.
	* src/call-rsa.c (rsa_sign, modulus_calc, rsa_decrypt)
	(rsa_verify): Follow changes of PolarSSL 1.2.9 with RSA blinding.
	Better error checking.

2013-10-04  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (gnuk_malloc): Update ->neighbor field of a chunk on
	the free list.
	(gnuk_free): Access free list after getting the lock.

2013-10-01  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (random_gen): Bug fix for INDEXed copy.

	* src/call-rsa.c (rsa_genkey): Call neug_flush and prng_seed.
	* polarssl/library/bignum.c (small_prime): More constants.
	(prng_seed, jkiss, mpi_fill_pseudo_random): New.
	(mpi_is_prime): Use mpi_fill_pseudo_random.

2013-09-30  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_is_prime): Enable trial divisions
	by small integers.
	Add Fermat primality test.
	(mpi_gen_prime): Limit random value so that two MSBs of result will
	be 0x11.

2013-09-27  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/include/polarssl/bignum.h (mpi_is_prime): ifdef-out.
	* polarssl/library/bignum.c (mpi_is_prime): It's now internal
	function, assuming we already know its coprime to small primes.
	(M): New constant MPI.  Multiply primes 2*...*691.
	(MAX_A): New constant MPI.  2^1024 / M - 1.
	(mpi_gen_prime): Specialize for 1024-bit, using Fouque-Tibouchi
	method.

2013-09-25  Niibe Yutaka  <gniibe@fsij.org>

	* src/sha256.h, src/adc.h
	* src/neug.c, src/adc_stm32f103.c: Update from NeuG 0.11.

	* chopstx: Upgrade to new Chopstx 0.00.

	* VERSION: New file.

	* src/configure (SERIALNO, SERIALNO_STR_LEN_DEFINE): New.
	(REVISION): Use the file VERSION if it doesn't have .git.